Fix bug causing horizontal scroll bar with bootstrap columns

--- a/app/assets/stylesheets/commitwith.scss
+++ b/app/assets/stylesheets/commitwith.scss
@@ -2,6 +2,10 @@ body {
   margin-top: 60px;
 }
 
+.container-fluid {
+  padding: 0;
+}
+
 // Top Navbar
 
 .navbar-brand-basic {
